--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "app-shop",
+  "name": "app-clothes-shop",
   "version": "0.1.0",
   "private": true,
+  "author": "Yauheni Hrechka",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tilework/opus": "0.0.7",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "redux": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
